--- a/index.html
+++ b/index.html
@@ -122,71 +122,54 @@
           </h2>
 
           <div class="services-grid">
-            <div class="service">
-              <div class="service-text-container">
-                <div class="service-text">
+            <div id="service-sticky-panel">
+              <div id="sticky-text" class="fade-in"></div>
+            </div>
+
+            <div class="service-grid-images">
+              <div class="service">
+                <template class="sticky-template">
                   <h3>
-                    <span class="italic bold">Yachting</span> lorem ipsum dolor
-                    sit amet consectetur adipisicing elit.
+                    <span class="italic bold">Yachting</span> — Private charters
+                    & sunset sails
                   </h3>
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Voluptatem eum culpa consequuntur dignissimos nam sint quasi
-                    commodi maiores cupiditate iure, temporibus aliquam! Autem
-                    tenetur qui natus totam quibusdam nulla modi!
-                  </p>
-                  <a href="">DISCOVER</a>
+                  <p>Lorem ipsum dolor sit amet…</p>
+                </template>
+                <div class="service-image-container">
+                  <img src="assets/images/yachts.jpg" alt="Yachting" />
                 </div>
               </div>
-              <div class="service-image-container">
-                <img src="assets/images/yachts.jpg" alt="" />
-              </div>
-            </div>
-            <div class="service">
-              <div class="service-text-container">
-                <div class="service-text">
+
+              <div class="service">
+                <template class="sticky-template">
                   <h3>
-                    <span class="italic bold">One-day Cruises</span> lorem ipsum
-                    dolor sit amet consectetur adipisicing elit.
+                    <span class="italic bold">One-day Cruises</span> Lorem ipsum
+                    dolor sit amet, consectetur adipisicing elit.
                   </h3>
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Voluptatem eum culpa consequuntur dignissimos nam sint quasi
-                    commodi maiores cupiditate iure, temporibus aliquam! Autem
-                    tenetur qui natus totam quibusdam nulla modi!
-                  </p>
-                  <a href="">DISCOVER</a>
+                  <p>Lorem ipsum dolor sit amet…</p>
+                </template>
+                <div class="service-image-container">
+                  <img src="assets/images/cruise.jpg" alt="One-day Cruises" />
                 </div>
               </div>
-              <div class="service-image-container">
-                <img src="assets/images/cruise.jpg" alt="" />
-              </div>
-            </div>
-            <div class="service">
-              <div class="service-text-container">
-                <div class="service-text">
+
+              <div class="service">
+                <template class="sticky-template">
                   <h3>
-                    <span class="italic bold">Transfers</span> lorem ipsum dolor
-                    sit amet consectetur adipisicing elit.
+                    <span class="italic bold">Transfers</span> Lorem ipsum dolor
+                    sit amet, consectetur adipisicing elit.
                   </h3>
-                  <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Voluptatem eum culpa consequuntur dignissimos nam sint quasi
-                    commodi maiores cupiditate iure, temporibus aliquam! Autem
-                    tenetur qui natus totam quibusdam nulla modi!
-                  </p>
-                  <a href="">DISCOVER</a>
+                  <p>Lorem ipsum dolor sit amet…</p>
+                </template>
+                <div class="service-image-container">
+                  <img src="assets/images/transfer-van.jpg" alt="" />
                 </div>
               </div>
-              <div class="service-image-container">
-                <img src="assets/images/transfer-van.jpg" alt="" />
-              </div>
-            </div>
-            <div class="service">
-              <div class="service-text-container">
-                <div class="service-text">
+
+              <div class="service">
+                <template class="sticky-template">
                   <h3>
-                    <span class="italic bold">Dining and Bars</span> consectetur
+                    <span class="italic bold">Dining & Bars</span> consectetur
                     adipisicing elit.
                   </h3>
                   <p>
@@ -195,31 +178,24 @@
                     commodi maiores cupiditate iure, temporibus aliquam! Autem
                     tenetur qui natus totam quibusdam nulla modi!
                   </p>
-                  <a href="">DISCOVER</a>
+                </template>
+                <div class="service-image-container">
+                  <img src="assets/images/finedining.jpg" alt="" />
                 </div>
               </div>
-              <div class="service-image-container">
-                <img src="assets/images/finedining.jpg" alt="" />
-              </div>
-            </div>
-            <div class="service">
-              <div class="service-text-container">
-                <div class="service-text">
-                  <h3>
-                    lorem ipsum <span class="italic bold">Wellness</span>
-                    .
-                  </h3>
+
+              <div class="service">
+                <template class="sticky-template">
+                  <h3>Lorem ipsum <span class="italic bold">Wellness</span></h3>
                   <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit.
                     Voluptatem eum culpa consequuntur dignissimos nam sint quasi
-                    commodi maiores cupiditate iure, temporibus aliquam! Autem
-                    tenetur qui natus totam quibusdam nulla modi!
+                    commodi maiores cupiditate iure, temporibus aliquam!
                   </p>
-                  <a href="">DISCOVER</a>
+                </template>
+                <div class="service-image-container">
+                  <img src="assets/images/spa.jpg" alt="" />
                 </div>
-              </div>
-              <div class="service-image-container">
-                <img src="assets/images/spa.jpg" alt="" />
               </div>
             </div>
           </div>
