responsivness at services, changed fonts

--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Instrument+Serif:ital@0;1&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
   </head>
   <body>
     <nav id="navbar">
@@ -84,7 +80,7 @@
     </nav>
     <section class="hero">
       <div class="hero-container">
-        <h1>The Ultimate Athens Concierge Service</h1>
+        <h1>Athens Concierge Service</h1>
         <p>
           Tailored tours, transfers, cruises & dinin
           <span class="italic">worry-free</span> from arrival to departure
@@ -138,6 +134,13 @@
                 <div class="service-image-container">
                   <img src="assets/images/yachts.jpg" alt="Yachting" />
                 </div>
+                <div class="mobile-service-text">
+                  <h3>
+                    <span class="italic bold">Yachting</span> — Private charters
+                    & sunset sails
+                  </h3>
+                  <p>Lorem ipsum dolor sit amet…</p>
+                </div>
               </div>
 
               <div class="service">
@@ -151,6 +154,13 @@
                 <div class="service-image-container">
                   <img src="assets/images/cruise.jpg" alt="One-day Cruises" />
                 </div>
+                <div class="mobile-service-text">
+                  <h3>
+                    <span class="italic bold">One-day Cruises</span> Lorem ipsum
+                    dolor sit amet, consectetur adipisicing elit.
+                  </h3>
+                  <p>Lorem ipsum dolor sit amet…</p>
+                </div>
               </div>
 
               <div class="service">
@@ -163,6 +173,13 @@
                 </template>
                 <div class="service-image-container">
                   <img src="assets/images/transfer-van.jpg" alt="" />
+                </div>
+                <div class="mobile-service-text">
+                  <h3>
+                    <span class="italic bold">Transfers</span> Lorem ipsum dolor
+                    sit amet, consectetur adipisicing elit.
+                  </h3>
+                  <p>Lorem ipsum dolor sit amet…</p>
                 </div>
               </div>
 
@@ -182,6 +199,18 @@
                 <div class="service-image-container">
                   <img src="assets/images/finedining.jpg" alt="" />
                 </div>
+                <div class="mobile-service-text">
+                  <h3>
+                    <span class="italic bold">Dining & Bars</span> consectetur
+                    adipisicing elit.
+                  </h3>
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Voluptatem eum culpa consequuntur dignissimos nam sint quasi
+                    commodi maiores cupiditate iure, temporibus aliquam! Autem
+                    tenetur qui natus totam quibusdam nulla modi!
+                  </p>
+                </div>
               </div>
 
               <div class="service">
@@ -196,6 +225,14 @@
                 <div class="service-image-container">
                   <img src="assets/images/spa.jpg" alt="" />
                 </div>
+                <div class="mobile-service-text">
+                  <h3>Lorem ipsum <span class="italic bold">Wellness</span></h3>
+                  <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Voluptatem eum culpa consequuntur dignissimos nam sint quasi
+                    commodi maiores cupiditate iure, temporibus aliquam!
+                  </p>
+                </div>
               </div>
             </div>
           </div>
@@ -204,7 +241,9 @@
       <section id="tailor-made">
         <div class="tailor-made-text">
           <p>Didn't find what you are looking for?</p>
-          <h2>We can create Tailor-made services.</h2>
+          <h2>
+            We can create <span class="italic">Tailor-made</span> services.
+          </h2>
         </div>
       </section>
     </main>
