--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <section class="hero">
       <div class="hero-container">
         <h1>Athens Concierge Service</h1>
-        <p>
+        <p class="subheader">
           Tailored tours, transfers, cruises & dinin
           <span class="italic">worry-free</span> from arrival to departure
         </p>
@@ -130,6 +130,9 @@
                     & sunset sails
                   </h3>
                   <p>Lorem ipsum dolor sit amet…</p>
+                  <div class="sticky-link">
+                    <a href="yachting.html">Explore Yachting</a>
+                  </div>
                 </template>
                 <div class="service-image-container">
                   <img src="assets/images/yachts.jpg" alt="Yachting" />
@@ -140,6 +143,9 @@
                     & sunset sails
                   </h3>
                   <p>Lorem ipsum dolor sit amet…</p>
+                  <div class="sticky-link">
+                    <a href="#">Explore Yachting</a>
+                  </div>
                 </div>
               </div>
 
@@ -150,6 +156,9 @@
                     dolor sit amet, consectetur adipisicing elit.
                   </h3>
                   <p>Lorem ipsum dolor sit amet…</p>
+                  <div class="sticky-link">
+                    <a href="#">one-day cruise</a>
+                  </div>
                 </template>
                 <div class="service-image-container">
                   <img src="assets/images/cruise.jpg" alt="One-day Cruises" />
@@ -160,6 +169,9 @@
                     dolor sit amet, consectetur adipisicing elit.
                   </h3>
                   <p>Lorem ipsum dolor sit amet…</p>
+                  <div class="sticky-link">
+                    <a href="#">one-day cruise</a>
+                  </div>
                 </div>
               </div>
 
@@ -170,6 +182,9 @@
                     sit amet, consectetur adipisicing elit.
                   </h3>
                   <p>Lorem ipsum dolor sit amet…</p>
+                  <div class="sticky-link">
+                    <a href="#">learn about transfers</a>
+                  </div>
                 </template>
                 <div class="service-image-container">
                   <img src="assets/images/transfer-van.jpg" alt="" />
@@ -180,6 +195,9 @@
                     sit amet, consectetur adipisicing elit.
                   </h3>
                   <p>Lorem ipsum dolor sit amet…</p>
+                  <div class="sticky-link">
+                    <a href="#">Learn about Transfers</a>
+                  </div>
                 </div>
               </div>
 
@@ -195,6 +213,9 @@
                     commodi maiores cupiditate iure, temporibus aliquam! Autem
                     tenetur qui natus totam quibusdam nulla modi!
                   </p>
+                  <div class="sticky-link">
+                    <a href="#">Dining & Bars</a>
+                  </div>
                 </template>
                 <div class="service-image-container">
                   <img src="assets/images/finedining.jpg" alt="" />
@@ -210,6 +231,9 @@
                     commodi maiores cupiditate iure, temporibus aliquam! Autem
                     tenetur qui natus totam quibusdam nulla modi!
                   </p>
+                  <div class="sticky-link">
+                    <a href="#">Dining & Bars</a>
+                  </div>
                 </div>
               </div>
 
@@ -221,6 +245,9 @@
                     Voluptatem eum culpa consequuntur dignissimos nam sint quasi
                     commodi maiores cupiditate iure, temporibus aliquam!
                   </p>
+                  <div class="sticky-link">
+                    <a href="#">Wellness Experience</a>
+                  </div>
                 </template>
                 <div class="service-image-container">
                   <img src="assets/images/spa.jpg" alt="" />
@@ -232,6 +259,9 @@
                     Voluptatem eum culpa consequuntur dignissimos nam sint quasi
                     commodi maiores cupiditate iure, temporibus aliquam!
                   </p>
+                  <div class="sticky-link">
+                    <a href="#">Wellness Experience</a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -259,33 +289,45 @@
         </div>
         <div class="footer-base">
           <div class="footer-base-top">
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-              ea, culpa sequi suscipit accusantium ullam saepe libero dicta
-              dignissimos cumque praesentium nostrum molestiae fuga.
-            </p>
-            <div class="footer-links">
+            <div class="footer-col">
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+                ea, culpa sequi suscipit accusantium ullam saepe libero dicta
+                dignissimos cumque praesentium nostrum molestiae fuga.
+              </p>
+            </div>
+            <div class="footer-col">
+              <h4>SERVICES</h4>
+
+              <div class="footer-links">
+                <ul>
+                  <li><a href="">Yachting</a></li>
+                  <li><a href="">One-day Cruises</a></li>
+                  <li><a href="">Transfers</a></li>
+                </ul>
+                <ul>
+                  <li><a href="">Dining & Bars</a></li>
+                  <li><a href="">Wellness</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="footer-col">
+              <h4>CONTACT</h4>
               <ul>
-                <li><a href="">transfers</a></li>
-                <li><a href="">concierge</a></li>
-              </ul>
-              <ul>
-                <li><a href="">yachting</a></li>
-                <li><a href="">tours</a></li>
+                <li><a href="">info@nauquest.com</a></li>
+                <li><a href="">+(30) 6979206046</a></li>
               </ul>
             </div>
-            <ul>
-              <li><a href="">email</a></li>
-              <li><a href="">1234567891</a></li>
-            </ul>
           </div>
           <div class="footer-base-bottom">
-            <p>Copyright © 2025 Nauquest. All rights reserved.</p>
+            <p id="copyright">
+              Copyright © 2025 Nauquest. All rights reserved.
+            </p>
             <div>
               <a href="">Terms of Service</a>
               <a href="">Privacy Policy</a>
             </div>
-            <p>
+            <p id="konstascreative">
               Made by
               <a href="https://konstascreative.com/" target="_blank"
                 >Konstas Creative</a
