img path change. text added and logo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
           </div>
         </div>
         <div class="nav-center">
-          <p>logo</p>
+          <img
+            class="logo"
+            src="assets/images/nauquest-logo.png"
+            alt="Nauquest Logo"
+            class="logo"
+          />
         </div>
         <div class="nav-right">
           <a class="primaryBtn" href="#">CONTACT US</a>
@@ -113,8 +118,10 @@
       <section id="services">
         <div class="services-container">
           <h2>
-            Dolor sit amet consectetur ipsum adipisicing elit
-            <span class="italic bold">High Quality Services</span>
+            Discover the true spirit of Athens and its nearby gems with our
+            local know-how. We’ll guide you to the right places to see, eat, and
+            experience. 
+            <span class="italic bold"></span>
           </h2>
 
           <div class="services-grid">
@@ -126,10 +133,19 @@
               <div class="service">
                 <template class="sticky-template">
                   <h3>
-                    <span class="italic bold">Yachting</span> — Private charters
-                    & sunset sails
+                    A brand new <span class="italic bold">Yachting</span>
+                    experience!
                   </h3>
-                  <p>Lorem ipsum dolor sit amet…</p>
+                  <p>
+                    Sail with our entrusted partners around the Aegean and
+                    Ionian. Greek island hopping is one of Europe’s unmissable
+                    adventures.
+                    <a href="https://www.nausail.com/">Nausail</a> is an expert
+                    in all aspects of yachting in Greece and is here to help you
+                    find the right boat at a fair price, plan your itinerary,
+                    prepare your journey and support you with tips and insights
+                    on how to live the ultimate Greek island sailing experience.
+                  </p>
                   <div class="sticky-link">
                     <a href="yachting.html">Explore Yachting</a>
                   </div>
@@ -139,10 +155,19 @@
                 </div>
                 <div class="mobile-service-text">
                   <h3>
-                    <span class="italic bold">Yachting</span> — Private charters
-                    & sunset sails
+                    A brand new
+                    <span class="italic bold">yachting</span> experience!
                   </h3>
-                  <p>Lorem ipsum dolor sit amet…</p>
+                  <p>
+                    Sail with our entrusted partners around the Aegean and
+                    Ionian. Greek island hopping is one of Europe’s unmissable
+                    adventures. Nausail (εδω μποορυμε να βαλουμε το link του
+                    nausail?) is an expert in all aspects of yachting in Greece
+                    and is here to help you find the right boat at a fair price,
+                    plan your itinerary, prepare your journey and support you
+                    with tips and insights on how to live the ultimate Greek
+                    island sailing experience.
+                  </p>
                   <div class="sticky-link">
                     <a href="#">Explore Yachting</a>
                   </div>
@@ -152,10 +177,27 @@
               <div class="service">
                 <template class="sticky-template">
                   <h3>
-                    <span class="italic bold">One-day Cruises</span> Lorem ipsum
-                    dolor sit amet, consectetur adipisicing elit.
+                    <span class="italic bold">Explore</span> Aegina - Hydra and
+                    Poros
                   </h3>
-                  <p>Lorem ipsum dolor sit amet…</p>
+                  <p>
+                    Step onto Aegina, a treasure trove of ancient wonders and
+                    vibrant local life. Visit the “Acropolis” of Aegina, indulge
+                    in the island’s delicious pistachio sweets, and wander
+                    through its picturesque seaside villages. 
+                  </p>
+                  <p>
+                    Sail into Poros, the island of lush pine forests and
+                    tranquil waters. Known for its rich maritime heritage and
+                    vibrant waterfront, Poros is the perfect blend of natural
+                    beauty and cultural discovery, waiting to be explored.
+                  </p>
+                  <p>
+                    Lose yourself in the charm of Hydra, an island where time
+                    stands still! With its car-free cobblestone streets, elegant
+                    mansions, and stories etched into every corner, Hydra offers
+                    a serene escape into Greece’s timeless beauty and history!
+                  </p>
                   <div class="sticky-link">
                     <a href="#">one-day cruise</a>
                   </div>
@@ -165,10 +207,27 @@
                 </div>
                 <div class="mobile-service-text">
                   <h3>
-                    <span class="italic bold">One-day Cruises</span> Lorem ipsum
-                    dolor sit amet, consectetur adipisicing elit.
+                    <span class="italic bold">Explore</span> Aegina - Hydra and
+                    Poros
                   </h3>
-                  <p>Lorem ipsum dolor sit amet…</p>
+                  <p>
+                    Step onto Aegina, a treasure trove of ancient wonders and
+                    vibrant local life. Visit the “Acropolis” of Aegina, indulge
+                    in the island’s delicious pistachio sweets, and wander
+                    through its picturesque seaside villages. 
+                  </p>
+                  <p>
+                    Sail into Poros, the island of lush pine forests and
+                    tranquil waters. Known for its rich maritime heritage and
+                    vibrant waterfront, Poros is the perfect blend of natural
+                    beauty and cultural discovery, waiting to be explored.
+                  </p>
+                  <p>
+                    Lose yourself in the charm of Hydra, an island where time
+                    stands still! With its car-free cobblestone streets, elegant
+                    mansions, and stories etched into every corner, Hydra offers
+                    a serene escape into Greece’s timeless beauty and history!
+                  </p>
                   <div class="sticky-link">
                     <a href="#">one-day cruise</a>
                   </div>
@@ -177,11 +236,12 @@
 
               <div class="service">
                 <template class="sticky-template">
-                  <h3>
-                    <span class="italic bold">Transfers</span> Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit.
-                  </h3>
-                  <p>Lorem ipsum dolor sit amet…</p>
+                  <h3><span class="italic bold">Ride</span> with us!</h3>
+                  <p>
+                    Wherever you're headed in Greece, count on us for high-end,
+                    reliable, and comfortable transfers. Avoid scams and travel
+                    safe, every time.
+                  </p>
                   <div class="sticky-link">
                     <a href="#">learn about transfers</a>
                   </div>
@@ -190,11 +250,12 @@
                   <img src="assets/images/transfer-van.jpg" alt="" />
                 </div>
                 <div class="mobile-service-text">
-                  <h3>
-                    <span class="italic bold">Transfers</span> Lorem ipsum dolor
-                    sit amet, consectetur adipisicing elit.
-                  </h3>
-                  <p>Lorem ipsum dolor sit amet…</p>
+                  <h3><span class="italic bold">Ride</span> with us!</h3>
+                  <p>
+                    Wherever you're headed in Greece, count on us for high-end,
+                    reliable, and comfortable transfers. Avoid scams and travel
+                    safe, every time.
+                  </p>
                   <div class="sticky-link">
                     <a href="#">Learn about Transfers</a>
                   </div>
@@ -204,17 +265,21 @@
               <div class="service">
                 <template class="sticky-template">
                   <h3>
-                    <span class="italic bold">Dining & Bars</span> consectetur
-                    adipisicing elit.
+                    Enjoy
+                    <span class="italic bold"
+                      >Greek authentic Mediterranean</span
+                    >
+                    cuisine.
                   </h3>
                   <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Voluptatem eum culpa consequuntur dignissimos nam sint quasi
-                    commodi maiores cupiditate iure, temporibus aliquam! Autem
-                    tenetur qui natus totam quibusdam nulla modi!
+                    Let us introduce you to the heart of Greek cuisine and
+                    hospitality. With insider knowledge, we’ll take you to
+                    authentic taverns where locals dine — offering delicious
+                    flavors all away from the tourist crowds and overpriced
+                    menus.
                   </p>
                   <div class="sticky-link">
-                    <a href="#">Dining & Bars</a>
+                    <a href="#">Dining</a>
                   </div>
                 </template>
                 <div class="service-image-container">
@@ -222,28 +287,33 @@
                 </div>
                 <div class="mobile-service-text">
                   <h3>
-                    <span class="italic bold">Dining & Bars</span> consectetur
-                    adipisicing elit.
+                    Enjoy
+                    <span class="italic bold"
+                      >Greek authentic Mediterranean</span
+                    >
+                    cuisine.
                   </h3>
                   <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Voluptatem eum culpa consequuntur dignissimos nam sint quasi
-                    commodi maiores cupiditate iure, temporibus aliquam! Autem
-                    tenetur qui natus totam quibusdam nulla modi!
+                    Let us introduce you to the heart of Greek cuisine and
+                    hospitality. With insider knowledge, we’ll take you to
+                    authentic taverns where locals dine — offering delicious
+                    flavors all away from the tourist crowds and overpriced
+                    menus.
                   </p>
                   <div class="sticky-link">
-                    <a href="#">Dining & Bars</a>
+                    <a href="#">Dining</a>
                   </div>
                 </div>
               </div>
 
               <div class="service">
                 <template class="sticky-template">
-                  <h3>Lorem ipsum <span class="italic bold">Wellness</span></h3>
+                  <h3>Breath & <span class="italic bold">Relax</span></h3>
                   <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Voluptatem eum culpa consequuntur dignissimos nam sint quasi
-                    commodi maiores cupiditate iure, temporibus aliquam!
+                    Experience the ultimate spa feeling with top-quality
+                    services delivered by experienced professionals who respect
+                    and cater to your individual needs. Available at your
+                    location or in the serene spaces of our trusted partners .
                   </p>
                   <div class="sticky-link">
                     <a href="#">Wellness Experience</a>
@@ -253,11 +323,12 @@
                   <img src="assets/images/spa.jpg" alt="" />
                 </div>
                 <div class="mobile-service-text">
-                  <h3>Lorem ipsum <span class="italic bold">Wellness</span></h3>
+                  <h3>Breath & <span class="italic bold">Relax</span></h3>
                   <p>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                    Voluptatem eum culpa consequuntur dignissimos nam sint quasi
-                    commodi maiores cupiditate iure, temporibus aliquam!
+                    Experience the ultimate spa feeling with top-quality
+                    services delivered by experienced professionals who respect
+                    and cater to your individual needs. Available at your
+                    location or in the serene spaces of our trusted partners .
                   </p>
                   <div class="sticky-link">
                     <a href="#">Wellness Experience</a>
@@ -306,7 +377,7 @@
                   <li><a href="">Transfers</a></li>
                 </ul>
                 <ul>
-                  <li><a href="">Dining & Bars</a></li>
+                  <li><a href="">Dining</a></li>
                   <li><a href="">Wellness</a></li>
                 </ul>
               </div>
