contact us page add

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           />
         </div>
         <div class="nav-right">
-          <a class="primaryBtn" href="#">CONTACT US</a>
+          <a class="primaryBtn" href="contact.html">CONTACT US</a>
         </div>
       </div>
     </nav>
@@ -49,9 +49,9 @@
             <li id="nav-yachting"><a href="#">Yachting</a></li>
             <li id="nav-cruise"><a href="#">One-day Cruise</a></li>
             <li id="nav-transfers"><a href="#">Transfers</a></li>
-            <li id="nav-dining"><a href="#">Fine Dining</a></li>
+            <li id="nav-dining"><a href="#">Dining</a></li>
             <li id="nav-wellness"><a href="#">Wellness</a></li>
-            <li id="nav-contact"><a href="#">Get In Touch</a></li>
+            <li id="nav-contact"><a href="contact.html">Get In Touch</a></li>
           </ul>
           <div id="menuImg-container">
             <img
@@ -71,12 +71,12 @@
             />
             <img
               data-id="nav-dining"
-              src="assets/images/cocktails.jpg"
+              src="assets/images/finedining.jpg"
               alt="Dining"
             />
             <img
               data-id="nav-wellness"
-              src="assets/images/finedining.jpg"
+              src="assets/images/spa.jpg"
               alt="Wellness"
             />
           </div>
@@ -118,10 +118,10 @@
       <section id="services">
         <div class="services-container">
           <h2>
-            Discover the true spirit of Athens and its nearby gems with our
-            local know-how. We’ll guide you to the right places to see, eat, and
-            experience. 
-            <span class="italic bold"></span>
+            Discover the <span class="italic bold">true spirit</span> of Athens
+            and its nearby gems with our local know-how. We’ll
+            <span class="italic bold">guide</span> you to the right places to
+            see, eat, and <span class="italic bold">experience</span>. 
           </h2>
 
           <div class="services-grid">
@@ -147,7 +147,20 @@
                     on how to live the ultimate Greek island sailing experience.
                   </p>
                   <div class="sticky-link">
-                    <a href="yachting.html">Explore Yachting</a>
+                    <a href="https://www.nausail.com/"
+                      >Explore Yachting
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        height="24px"
+                        viewBox="0 -960 960 960"
+                        width="24px"
+                        fill="#0a0a0a"
+                      >
+                        <path
+                          d="M222.15-180 180-222.15 637.85-680H360v-60h380v380h-60v-277.85L222.15-180Z"
+                        />
+                      </svg>
+                    </a>
                   </div>
                 </template>
                 <div class="service-image-container">
@@ -169,7 +182,20 @@
                     island sailing experience.
                   </p>
                   <div class="sticky-link">
-                    <a href="#">Explore Yachting</a>
+                    <a href="#"
+                      >Explore Yachting
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        height="24px"
+                        viewBox="0 -960 960 960"
+                        width="24px"
+                        fill="#0a0a0a"
+                      >
+                        <path
+                          d="M222.15-180 180-222.15 637.85-680H360v-60h380v380h-60v-277.85L222.15-180Z"
+                        />
+                      </svg>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -199,7 +225,20 @@
                     a serene escape into Greece’s timeless beauty and history!
                   </p>
                   <div class="sticky-link">
-                    <a href="#">one-day cruise</a>
+                    <a href="#"
+                      >One-day Cruise
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        height="24px"
+                        viewBox="0 -960 960 960"
+                        width="24px"
+                        fill="#0a0a0a"
+                      >
+                        <path
+                          d="M222.15-180 180-222.15 637.85-680H360v-60h380v380h-60v-277.85L222.15-180Z"
+                        />
+                      </svg>
+                    </a>
                   </div>
                 </template>
                 <div class="service-image-container">
@@ -229,7 +268,20 @@
                     a serene escape into Greece’s timeless beauty and history!
                   </p>
                   <div class="sticky-link">
-                    <a href="#">one-day cruise</a>
+                    <a href="#"
+                      >One-day Cruise
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        height="24px"
+                        viewBox="0 -960 960 960"
+                        width="24px"
+                        fill="#0a0a0a"
+                      >
+                        <path
+                          d="M222.15-180 180-222.15 637.85-680H360v-60h380v380h-60v-277.85L222.15-180Z"
+                        />
+                      </svg>
+                    </a>
                   </div>
                 </div>
               </div>
@@ -243,7 +295,7 @@
                     safe, every time.
                   </p>
                   <div class="sticky-link">
-                    <a href="#">learn about transfers</a>
+                    <a href="#">Learn about Transfers</a>
                   </div>
                 </template>
                 <div class="service-image-container">
