font size changes and minor style adjustments

--- a/yachting.html
+++ b/yachting.html
@@ -156,7 +156,7 @@
         <div class="footer-base">
           <div class="footer-base-top">
             <div class="footer-col">
-              <p>
+              <p class="footer-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
                 ea, culpa sequi suscipit accusantium ullam saepe libero dicta
                 dignissimos cumque praesentium nostrum molestiae fuga.
