basic meta tag add

--- a/index.html
+++ b/index.html
@@ -2,8 +2,72 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nauquest</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Nauquest – Tailored Athens Concierge Service</title>
+    <meta
+      name="description"
+      content="Tailored tours, transfers, cruises &amp; dining — worry-free from arrival to departure"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- SEO -->
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://nauquest.com/" />
+
+    <!-- 1) Convert logo.JPG → favicon.ico (16×16, 32×32) and place at /favicon.ico -->
+    <link rel="icon" href="assets/favicon/favicon.ico" type="image/x-icon" />
+    <!-- 2) PNGs for modern browsers & Apple -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/favicon/favicon-16x16.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/favicon/apple-touch-icon.png"
+    />
+    <meta name="theme-color" content="#1A2642" />
+
+    <!-- Open Graph / Facebook & LinkedIn -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nauquest.com/" />
+    <meta
+      property="og:title"
+      content="Nauquest – Tailored Athens Concierge Service"
+    />
+    <meta
+      property="og:description"
+      content="Tailored tours, transfers, cruises &amp; dining — worry-free from arrival to departure"
+    />
+    <meta
+      property="og:image"
+      content="https://nauquest.com/assets/images/logo.png"
+    />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://nauquest.com/" />
+    <meta
+      name="twitter:title"
+      content="Nauquest – Tailored Athens Concierge Service"
+    />
+    <meta
+      name="twitter:description"
+      content="Tailored tours, transfers, cruises &amp; dining — worry-free from arrival to departure"
+    />
+    <meta
+      name="twitter:image"
+      content="https://nauquest.com/assets/images/logo.png"
+    />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
