minor changes allaround

--- a/contact.html
+++ b/contact.html
@@ -71,12 +71,12 @@
             />
             <img
               data-id="nav-dining"
-              src="assets/images/cocktails.jpg"
+              src="assets/images/finedining.jpg"
               alt="Dining"
             />
             <img
               data-id="nav-wellness"
-              src="assets/images/finedining.jpg"
+              src="assets/images/spa.jpg"
               alt="Wellness"
             />
           </div>
@@ -111,9 +111,17 @@
                 at illum suscipit exercitationem amet.
               </p>
               <div class="contact-info">
-                <p><a href="#">Phone: +30 697 920 6046</a></p>
-                <p><a href="#">Email: info@nauquest.com</a></p>
-                <p><a href="#">WhatsaApp: +30 697 920 6046</a></p>
+                <p>Phone: <a href="tel:+6979206046">+30 697 920 6046</a></p>
+                <p>
+                  Email:
+                  <a href="mailto:info@nauquest.com">info@nauquest.com</a>
+                </p>
+                <p>
+                  WhatsaApp:
+                  <a href="https://wa.me/306979206046" target="_blank"
+                    >+30 697 920 6046</a
+                  >
+                </p>
               </div>
             </div>
             <form action="#" method="POST">
@@ -125,30 +133,6 @@
 
               <label for="telephone">Telephone</label>
               <input type="tel" id="telephone" name="telephone" />
-
-              <label for="guests">Guests *</label>
-              <input
-                type="number"
-                id="guests"
-                name="guests"
-                min="1"
-                required
-                placeholder="Number of guests"
-              />
-
-              <label for="arrival">Arrival Date</label>
-              <input type="date" id="arrival" name="arrival" />
-
-              <label for="departure">Departure Date</label>
-              <input type="date" id="departure" name="departure" />
-
-              <label for="destination">Destination</label>
-              <input
-                type="text"
-                id="destination"
-                name="destination"
-                placeholder="Athens"
-              />
 
               <label for="interest">Interested In</label>
               <select id="interest" name="interest">
@@ -221,7 +205,7 @@
             <p id="konstascreative">
               Made by
               <a href="https://konstascreative.com/" target="_blank"
-                >Konstas Creative</a
+                >KonstasCreative</a
               >
             </p>
           </div>
