--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
                 </p>
               </div>
             </div>
-            <form action="#" method="POST">
+            <form name="contact" method="POST" netlify>
               <label for="fullname">Full Name *</label>
               <input type="text" id="fullname" name="fullname" required />
 
